# tt-emu

./: .gitignore  BUILDING.md  LICENSE  PLAN.md  README.md  flake.nix  pyproject.toml  tt-emu  tt-emu-tui
.github/workflows/: ci.yml
docs/: audio-dac-dma.md  battery-and-power.md  firmware-2n-mt.md  gpio-buttons-led.md  index.md  interrupts-and-timers.md  memory-map-and-boot.md  nand-and-nfc-controller.md  nand-image-layout.md  oid-sensor.md  system-control-and-clock.md  usb-musb-device.md  zc3201-boot-feasibility.md  zc3201-producer-addresses.md  zc90b-auth.md
scripts/: screenshot.py  zc3201_audio_block.py  zc3201_audio_mmio.py  zc3201_badblock_probe.py  zc3201_boot_probe.py  zc3201_chomp_open.py  zc3201_cprecover_probe.py  zc3201_descend_probe.py  zc3201_diag_forcegood.py  zc3201_discovery_probe.py  zc3201_fsopen_probe.py  zc3201_heap_probe.py  zc3201_init_precond.py  zc3201_mount_probe.py  zc3201_mtdlog.py  zc3201_oid_probe.py  zc3201_oid_trace.py  zc3201_oob_offset.py  zc3201_opendir_probe.py  zc3201_producer_capture.py  zc3201_producer_probe.py  zc3201_realmachine_probe.py  zc3201_scan_struct.py  zc3201_scan_trace.py  zc3201_seed_experiment.py  zc3201_statechart_probe.py  zc_dis.py  zc_lit.py  zc_nb.py
src/tt_emu/: __init__.py  __main__.py  audio_capture.py  boot.py  cli.py  firmware_fetch.py  loader.py  machine.py  nand_image.py  peripheral.py  runner.py  (+2 more)
tests/: _data.py  _data_local.example.py  _pilot.py  test_audio_output.py  test_core.py  test_firmware_blobs.py  test_firmware_debug.py  test_firmware_fetch.py  test_firmware_profile.py  test_main_binary.py  test_nand.py  test_nand_provision.py  test_oid_audio.py  test_scripting.py  test_session.py  test_tui.py  test_zc3201_scripting.py
tt_emu/: __init__.py  audio_capture.py  boot.py  cli.py  emulator.py  fat16.py  firmware_fetch.py  firmware_profile.py  loader.py  machine.py  mmu_boot.py  nand_image.py  nand_image_zc3201.py  nand_provision.py  peripheral.py  runner.py  tui.py
(+38 files in other folders)
