[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tt-emu"
version = "0.0.1"
description = "A hardware-level emulator of the Ravensburger tiptoi pen"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Joachim Breitner", email = "mail@joachim-breitner.de" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["tiptoi", "emulator", "arm", "unicorn"]

dependencies = [
    "unicorn>=2.0",
    "capstone>=5.0",
    "textual>=0.60",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy"]

[project.scripts]
tt-emu = "tt_emu.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tt_emu"]

[tool.ruff]
line-length = 100
target-version = "py310"
# scripts/ are ad-hoc RE/debug probes (dense one-liners on purpose), not shipped
# package code — hold tt_emu/ and tests/ to the lint standard, not the throwaways.
extend-exclude = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
